--- a/application/templates/single_product.html
+++ b/application/templates/single_product.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% block body %}
 {% from 'helpers.html' import popup_div_macro with context %}
+
+    <script type="text/javascript" src="{{ url_for ('static', filename= "js/single_product.js") }}"></script>
+
 <div class="row">
 
     <div class="col-md-7" id="single_post">
@@ -10,8 +13,8 @@
                 <button type="button" class="btn btn-block btn-default dropdown-toggle user_but" data-toggle="dropdown">
                     Edit <span class="caret"></span></button>
                 <ul class="dropdown-menu" role="menu">
-                    <li><a href="{{ url_for('user_edit_product', id= product.id  ) }}">edit</a></li>
-                    <li><a href="#" onclick="user_del_product(event);">delete</a></li>
+                    <li><a href="{{ url_for('edit_product', id= product.id  ) }}">edit</a></li>
+                    <li><a href="#" onclick="delete_product({{ product.id }}, event);">delete</a></li>
 
                 </ul>
             </div>
@@ -120,8 +123,8 @@
                     <button type="button" class="btn btn-default btn-lg dropdown-toggle" id="comment_but"
                             data-toggle="dropdown">Sort <span class="caret"></span></button>
                     <ul class="dropdown-menu" role="menu">
-                        <li><a href="#" onclick="product_comment('data', event);">data</a></li>
-                        <li><a href="#" onclick="product_comment('rating', event);">rating</a></li>
+                        <li><a href="#" onclick="product_comment( {{ product.id }}, 'data', event);">data</a></li>
+                        <li><a href="#" onclick="product_comment({{ product.id }}, 'rating', event);">rating</a></li>
 
                     </ul>
                 </div>
@@ -215,106 +218,6 @@
 </div>
 </div>
 
-<script type="text/javascript">
-    function user_del_product(e) {
-        var id = "{{product_id}}"
-        alert(id);
-        e.preventDefault()
-        if (confirm('Are you sure you want to save this thing into the database?')) {
 
-            $.post("{{ url_for('user_del_product')}}", {id: id}, function (data) {
-                window.location.href = "{{ url_for('popular_product') }}";
-            });
-        } else {
-            // Do nothing!
-        }
-
-    }
-    $(document).ready(function () {
-        $('.anon_like').click(function () {
-            $(".messages-container").fadeIn().delay(3000).fadeOut();
-        });
-
-        $('#anon_comment').click(function () {
-            $(".messages-container").fadeIn().delay(3000).fadeOut();
-        });
-    });
-
-
-    function product_comment(sort, event) {
-        $.ajax({
-            type: "POST",
-            url: "{{url_for('product_contain_comment' )}}",
-            data: "product_id=" + "{{product_id}}" + "&sort=" + sort,
-            success: function (data) {
-                $("#comment").html(data.comments);
-            },
-            error: function (xhr, str) {
-                alert('Mistake ' + xhr.responseCode);
-            }
-        });
-        event.preventDefault();
-
-    };
-
-
-    $(document).ready(function () {
-        $('#button_comment1').click(function () {
-            $("#hiden_form1").slideToggle(500);
-        });
-        $("textarea.my_textarea").val("Type your comment");
-
-        $("textarea.my_textarea").focus(function () {
-            $("textarea.my_textarea").val("");
-        });
-
-
-    });
-
-    $("#form1.comment_form").submit(function (event) {
-        $("#hiden_form1").slideToggle();
-        var formData = new FormData($(this)[0]);
-
-        $.ajax({
-            type: "POST",
-            url: $(this).attr('action'),
-            data: formData,
-            processData: false,
-            contentType: false,
-            success: function (data) {
-                $("#comment").html(data.comments);
-                $('textarea#text').val("");
-
-            },
-            error: function (xhr, str) {
-                alert('Mistake ' + xhr.responseCode);
-            }
-        });
-        event.preventDefault();
-    });
-
-    $("#form2.comment_form").submit(function (event) {
-        var formData = new FormData($(this)[0]);
-
-        $.ajax({
-            type: "POST",
-            url: $(this).attr('action'),
-            data: formData,
-            processData: false,
-            contentType: false,
-            success: function (data) {
-                $("#comment").html(data.comments);
-                $('textarea#text').val("");
-
-            },
-            error: function (xhr, str) {
-                alert('Mistake ' + xhr.responseCode);
-            }
-        });
-        event.preventDefault();
-    });
-
-
-</script>
 {% endblock %}
 
