--- a/application/templates/comments.html
+++ b/application/templates/comments.html
@@ -1,3 +1,4 @@
+    <script type="text/javascript" src="{{ url_for ('static', filename= "js/comment.js") }}"></script>
 
 {% from 'helpers.html' import post_comment_macro with context %}
     {%- for key, value in dictionary.iteritems() recursive -%}
@@ -20,38 +21,6 @@
 
 
 
-<script type="text/javascript">
-
-
-$(".discussion").click(function (event){
-    var id = $(this).attr('id');
-    $(".answer#answer" + id).slideToggle();
-
-
-    var user = $(this).attr('user');
-    var post = "{{postid}}";
-    $.ajax({
-        type: "POST",
-        url: '/comment_form',
-        data: "parent_id=" + id + "&post_id=" + post,
-        success: function (data) {
-             $(".answer#answer" + id).html(data.com_form);
-
-            $("textarea#text").val(user + ", ");
-
-        },
-        error: function (xhr, str) {
-            alert('Mistake ' + xhr.responseCode);
-        }
-    });
-    event.preventDefault();
-
-});
-
-
-
-
-</script>
 
 
 
