--- a/application/templates/crop_image.html
+++ b/application/templates/crop_image.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block body %}
 
+    <script src="{{ url_for ('static', filename= "js/cropper.js") }}"></script>
 
 <div id="status">
 </div>
