--- a/application/templates/edit_post.html
+++ b/application/templates/edit_post.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <h1>Add post</h1>
-<form action="{{ url_for('user_edit_post', id=id )}}" method="post" class="form-horizontal" enctype=multipart/form-data>
+<form action="{{ url_for('edit_post', id=id )}}" method="post" class="form-horizontal" enctype=multipart/form-data>
     <div class="control-group">
         <div class="controls">
                     {{ form.csrf_token }}
