--- a/application/templates/popular_product.html
+++ b/application/templates/popular_product.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block body %}
 {% from 'helpers.html' import products_macro with context %}
+        <script type="text/javascript" src="{{ url_for ('static', filename= "js/single_product.js") }}"></script>
+
 
   Sort by
   <a href="{{url_for('popular_product', sort = 'data')}}">data</a>
@@ -10,145 +12,13 @@
 
   {% for product in products.items %}
 
-    {{ products_macro(product, dict_like, saved_list, 3) }}
+    {{ products_macro(product, dict_like, list_of_favourite, 3) }}
 
 
 {% endfor%}
 
 
-
-
 </div>
 
 
-
-
-
-
-
-<script type="text/javascript">
-
-
-jQuery.fn.clickToggle = function(a,b) {
-  function cb(){ [b,a][this._tog^=1].call(this); }
-  return this.on("click", cb);
-};
-
-$( "img#white.product" ).clickToggle(function() {
-    var product_id = $(this).attr("product_id");
-    $(this).attr("src", 'static/image/blue_heart.png');
-
-    $.ajax({
-         type: 'POST',
-         url: "/like_product",
-         data: "id=" +product_id,
-         success: function(data){
-             $('#vote_countproduct' + product_id).html(data);
-         }
-    });
-}, function() {
-    $(this).attr("src", 'static/image/white.png');
-
-    var product_id = $(this).attr("product_id");
-      $.ajax({
-         type: 'POST',
-         url: "/unlike_product",
-         data: "id=" +product_id,
-         success: function(data){
-             $('#vote_countproduct' + product_id).html(data);
-         }
-    });
-});
-
-
-$( "img#blue.product" ).clickToggle(function() {
-    var product_id = $(this).attr("product_id");
-    $(this).attr("src", 'static/image/white.png');
-
-    $.ajax({
-         type: 'POST',
-         url: "/unlike_product",
-         data: "id=" +product_id,
-         success: function(data){
-
-             $('#vote_countproduct' + product_id).html(data);
-         }
-    });
-}, function() {
-    var product_id = $(this).attr("product_id");
-        $(this).attr("src", 'static/image/blue_heart.png');
-
-      $.ajax({
-         type: 'POST',
-         url: "/like_product",
-         data: "id=" +product_id,
-         success: function(data){
-             $('#vote_countproduct' + product_id).html(data);
-         }
-    });
-});
-
-
-
-$( "img#gold_star.product" ).clickToggle(function() {
-    var product_id = $(this).attr("product_id");
-
-    $(this).attr("src", 'static/image/white_star.png');
-
-    $.ajax({
-         type: 'GET',
-         url: "{{ url_for('delete_product') }}",
-         data: "product_id=" +product_id,
-         success: function(data){
-
-             $('.product#star_gold' + product_id).text("Add to saved");
-         }
-    });
-
-}, function() {
-    var product_id = $(this).attr("product_id");
-        $(this).attr("src", 'static/image/gold_star.png');
-
-      $.ajax({
-         type: 'GET',
-         url: "{{ url_for('save_product') }}",
-         data: "product_id=" +product_id,
-         success: function(data){
-             $('.product#star_gold' + product_id).text("Delete_from_saved");
-         }
-    });
-});
-
-$( "img#white_star.product" ).clickToggle(function() {
-    var product_id = $(this).attr("product_id");
-
-    $(this).attr("src", 'static/image/gold_star.png');
-
-    $.ajax({
-         type: 'GET',
-         url: "{{ url_for('save_product') }}",
-         data: "product_id=" +product_id,
-
-         success: function(data){
-             $('.product#star_white' + product_id).text("Delete from saved");
-         }
-    });
-
-}, function() {
-    var product_id = $(this).attr("product_id");
-        $(this).attr("src", 'static/image/white_star.png');
-
-      $.ajax({
-         type: 'GET',
-         url: "{{ url_for('delete_product') }}",
-         data: "product_id=" +product_id,
-         success: function(data){
-             $('.product#star_white' + product_id).text("Add to saved");
-         }
-    });
-});
-
-
-
-</script>
 {% endblock %}
