--- a/application/templates/product_comments.html
+++ b/application/templates/product_comments.html
@@ -1,4 +1,5 @@
 
+    <script type="text/javascript" src="{{ url_for ('static', filename= "js/comment.js") }}"></script>
 
 {% from 'helpers.html' import product_comment_macro with context %}
 
@@ -21,31 +22,3 @@
     {%- endfor -%}
 
 
-<script>
-
-
-
-
-
-$(".discussion").click(function (event){
-    var id = $(this).attr('id');
-    $(".answer#answer" + id).slideToggle();
-    var user = $(this).attr('user');
-    var product = "{{product_id}}";
-    $.ajax({
-        type: "POST",
-        url: '/product_comment_form',
-        data: "parent_id=" + id + "&product_id=" + product,
-        success: function (data) {
-             $(".answer#answer" + id).html(data.com_form);
-
-            $("textarea#text").val(user + ", ");
-
-        },
-        error: function (xhr, str) {
-            alert('Mistake ' + xhr.responseCode);
-        }
-    });
-    event.preventDefault();
-});
-</script>
