--- a/application/templates/user_container/user_contain_comment.html
+++ b/application/templates/user_container/user_contain_comment.html
@@ -1,135 +1,21 @@
 {% from 'helpers.html' import post_comment_macro with context %}
-        {% if comments|length >= 1 %}
-                 <a href="#" onclick="Comment_container('data', 'comment', event);">sort by data|</a>
-             <a href="#" onclick="Comment_container('vote', 'comment', event);">sort by rating</a><br>
-            {% for comment in comments %}
-                {% if not comment.deleted %}
+<script type="text/javascript" src="{{ url_for ('static', filename= "js/comment.js") }}"></script>
+        <script type="text/javascript" src="{{ url_for ('static', filename= "js/user_container.js") }}" acync></script>
 
-                    Comment for post <a href="{{url_for('singlepost', postid = comment.post_id )}}">{{comment.post.title}}</a>
-                    {{ post_comment_macro(comment, dict_like) }}
-                {% endif %}
-            {% endfor %}
-        {% else %}
-            <p>You have not comments yet</p>
-            <p>Could you read something?</p>
-            <a href="{{url_for('last_posts')}}">Read latest</a>
-                    {% endif %}
-<script>
-function del_post_comment(e, id) {
-
-    e.preventDefault()
-    if (confirm('Are you sure you want to save this thing into the database?')) {
-
-        $.post( "{{ url_for('del_post_comment')}}", {id:id},function( data ) {
-            $(".one_comment#comment" + id).html(data.deleted);
-             $("#edit" + id).text(data.nodelet);
+{% if comments|length >= 1 %}
+    <li id="date" class="comment" user ="{{ user_id }}"><a href="#">date</a></li>
+    <li id="vote" class="comment" user ="{{ user_id }}"><a href="#">rating</a></li>
+    {% for comment in comments %}
+        {% if not comment.deleted %}
+            Comment for post
+            <a href="{{ url_for('singlepost', postid = comment.post_id ) }}">{{ comment.post.title }}</a>
+            {{ post_comment_macro(comment, dict_like) }}
+        {% endif %}
+    {% endfor %}
+{% else %}
+    <p>You have not comments yet</p>
+    <p>Could you read something?</p>
+    <a href="{{ url_for('last_posts') }}">Read latest</a>
+{% endif %}
 
 
-        });
-} else {
-    // Do nothing!
-}
-
-}
-
-function edit_comment(event, id){
-    event.preventDefault();
-
-    $.ajax({
-        type: "GET",
-        url: '/edit_post_comment/'+ id,
-
-        success: function (data) {
-             $(".one_comment#comment" + id).html(data.form);
-             $("#edit" + id).text(data.noedit);
-
-        },
-        error: function (xhr, str) {
-            alert('Mistake ' + xhr.responseCode);
-        }
-    });
-
-
-};
-
-
-
-jQuery.fn.clickToggle = function(a,b) {
-  function cb(){ [b,a][this._tog^=1].call(this); }
-  return this.on("click", cb);
-};
-
-$( "img#white.comment" ).clickToggle(function() {
-    var comment_id = $(this).attr("comment_id");
-    $(this).attr("src", '/static/image/blue_heart.png');
-
-    $.ajax({
-         type: 'POST',
-         url: "/like_comment",
-         data: "id=" +comment_id,
-         success: function(data){
-             $('#vote_countcomment' + comment_id).html(data);
-         }
-    });
-}, function() {
-    $(this).attr("src", '/static/image/white.png');
-
-    var comment_id = $(this).attr("comment_id");
-      $.ajax({
-         type: 'POST',
-         url: "/unlike_comment",
-         data: "id=" +comment_id,
-         success: function(data){
-             $('#vote_countcomment' + comment_id).html(data);
-         }
-    });
-});
-
-
-$( "img#blue.comment" ).clickToggle(function() {
-    var comment_id = $(this).attr("comment_id");
-    $(this).attr("src", '/static/image/white.png');
-
-    $.ajax({
-         type: 'POST',
-         url: "/unlike_comment",
-         data: "id=" +comment_id,
-         success: function(data){
-
-             $('#vote_countcomment' + comment_id).html(data);
-         }
-    });
-}, function() {
-    var comment_id = $(this).attr("comment_id");
-        $(this).attr("src", '/static/image/blue_heart.png');
-
-      $.ajax({
-         type: 'POST',
-         url: "/like_comment",
-         data: "id=" +comment_id,
-         success: function(data){
-             $('#vote_countcomment' + comment_id).html(data);
-         }
-    });
-});
-
-$(".com_edit").click(function (event){
-    var id = $(this).attr('com_id');
-    $.ajax({
-        type: "GET",
-        url: '/edit_prod_comment/'+ id,
-
-        success: function (data) {
-             $(".one_comment#comment" + id).html(data.form);
-
-
-
-        },
-        error: function (xhr, str) {
-            alert('Mistake ' + xhr.responseCode);
-        }
-    });
-    event.preventDefault();
-
-});
-</script>
