--- a/application/templates/user_container/user_contain_post_saved.html
+++ b/application/templates/user_container/user_contain_post_saved.html
@@ -1,139 +1,17 @@
 {% from 'helpers.html' import posts_macro with context %}
+<script type="text/javascript" src="{{ url_for ('static', filename= "js/single_post.js") }}"></script>
+<script type="text/javascript" src="{{ url_for ('static', filename= "js/user_container.js") }}"></script>
+<script type="text/javascript" src="{{ url_for ('static', filename= "js/my.js") }}"></script>
+
 {% if posts|length >= 1 %}
-          <a href="#" onclick="Saved_container('data', 'post', event);">sort by data|</a>
-             <a href="#" onclick="Saved_container('vote', 'post', event);">sort by rating</a>
+    <li id="date" class="post" user="{{ user_id }}"><a href="#">date</a></li>
+    <li id="vote" class="post" user="{{ user_id }}"><a href="#">rating</a></li>
 
-                {% for post in posts %}
-
-                    {{ posts_macro(post, dict_like, saved_list) }}
-                {% endfor %}
-
+    {% for post in posts %}
+        {{ posts_macro(post, dict_like, list_of_favourite) }}
+    {% endfor %}
 
 {% else %}
     <p>You have not saved yet</p>
 
 {% endif %}
-<script>
-
-jQuery.fn.clickToggle = function(a,b) {
-  function cb(){ [b,a][this._tog^=1].call(this); }
-  return this.on("click", cb);
-};
-
-$( "img#white.post" ).clickToggle(function() {
-    var post_id = $(this).attr("post_id");
-    $(this).attr("src", '/static/image/blue_heart.png');
-
-    $.ajax({
-         type: 'POST',
-         url: "/like_post",
-         data: "id=" +post_id,
-         success: function(data){
-             $('#vote_countpost' + post_id).html(data);
-         }
-    });
-}, function() {
-    $(this).attr("src", '/static/image/white.png');
-
-    var post_id = $(this).attr("post_id");
-      $.ajax({
-         type: 'POST',
-         url: "/unlike_post",
-         data: "id=" +post_id,
-         success: function(data){
-             $('#vote_countpost' + post_id).html(data);
-         }
-    });
-});
-
-
-$( "img#blue.post" ).clickToggle(function() {
-    var post_id = $(this).attr("post_id");
-    $(this).attr("src", '/static/image/white.png');
-
-    $.ajax({
-         type: 'POST',
-         url: "/unlike_post",
-         data: "id=" +post_id,
-         success: function(data){
-
-             $('#vote_countpost' + post_id).html(data);
-         }
-    });
-}, function() {
-    var post_id = $(this).attr("post_id");
-        $(this).attr("src", '/static/image/blue_heart.png');
-
-      $.ajax({
-         type: 'POST',
-         url: "/like_post",
-         data: "id=" +post_id,
-         success: function(data){
-             $('#vote_countpost' + post_id).html(data);
-         }
-    });
-});
-
-
-
-$( "img#gold_star.post" ).clickToggle(function() {
-    var post_id = $(this).attr("post_id");
-
-    $(this).attr("src", '/static/image/white_star.png');
-
-    $.ajax({
-         type: 'GET',
-         url: "{{ url_for('delete_post') }}",
-         data: "post_id=" +post_id,
-         success: function(data){
-
-             $('.post#star_gold' + post_id).text("Add to saved");
-         }
-    });
-
-}, function() {
-    var post_id = $(this).attr("post_id");
-        $(this).attr("src", '/static/image/gold_star.png');
-
-      $.ajax({
-         type: 'GET',
-         url: "{{ url_for('save_post') }}",
-         data: "post_id=" +post_id,
-         success: function(data){
-             $('.post#star_gold' + post_id).text("Delete_from_saved");
-         }
-    });
-});
-
-$( "img#white_star.post" ).clickToggle(function() {
-    var post_id = $(this).attr("post_id");
-
-    $(this).attr("src", '/static/image/gold_star.png');
-
-    $.ajax({
-         type: 'GET',
-         url: "{{ url_for('save_post') }}",
-         data: "post_id=" +post_id,
-
-         success: function(data){
-             $('.post#star_white' + post_id).text("Delete from saved");
-         }
-    });
-
-}, function() {
-    var post_id = $(this).attr("post_id");
-        $(this).attr("src", '/static/image/white_star.png');
-
-      $.ajax({
-         type: 'GET',
-         url: "{{ url_for('delete_post') }}",
-         data: "post_id=" +post_id,
-         success: function(data){
-             $('.post#star_white' + post_id).text("Add to saved");
-         }
-    });
-});
-
-
-
-</script>
