--- a/application/templates/user_container/user_contain_prod_comment.html
+++ b/application/templates/user_container/user_contain_prod_comment.html
@@ -1,8 +1,10 @@
 {% from 'helpers.html' import product_comment_macro with context %}
+<script type="text/javascript" src="{{ url_for ('static', filename= "js/user_container.js") }}" async></script>
+<script type="text/javascript" src="{{ url_for ('static', filename= "js/comment.js") }}"></script>
 
 {% if comments|length >= 1 %}
-    <a href="#" onclick="Comment_container('data', 'prod_comment', event);">sort by data</a>
-    <a href="#" onclick="Comment_container('vote', 'prod_comment', event);">sort by rating</a><br>
+    <li id="date" class="prod_comment" user ="{{ user_id }}"><a href="#">date</a></li>
+    <li id="vote" class="prod_comment" user ="{{ user_id }}"><a href="#">rating</a></li>
     {% for comment in comments %}
         {% if comment.deleted == False %}
             Comment for product <a href="{{url_for('singleproduct', product_id = comment.product_id )}}">{{comment.product.title}}</a>
@@ -14,69 +16,3 @@
     <p>Could you read something?</p>
     <a href="{{url_for('last_posts')}}">Read latest</a>
 {% endif %}
-<script>
-
-    jQuery.fn.clickToggle = function (a, b) {
-        function cb() {
-            [b, a][this._tog ^= 1].call(this);
-        }
-
-        return this.on("click", cb);
-    };
-
-    $("img#white.comment").clickToggle(function () {
-        var comment_id = $(this).attr("comment_id");
-        $(this).attr("src", '/static/image/blue_heart.png');
-
-        $.ajax({
-            type: 'POST',
-            url: "/like_prodcomment",
-            data: "id=" + comment_id,
-            success: function (data) {
-                $('#vote_countprodcomment' + comment_id).html(data);
-            }
-        });
-    }, function () {
-        $(this).attr("src", '/static/image/white.png');
-
-        var comment_id = $(this).attr("comment_id");
-        $.ajax({
-            type: 'POST',
-            url: "/unlike_prodcomment",
-            data: "id=" + comment_id,
-            success: function (data) {
-                $('#vote_countprodcomment' + comment_id).html(data);
-            }
-        });
-    });
-
-
-    $("img#blue.comment").clickToggle(function () {
-        var comment_id = $(this).attr("comment_id");
-        $(this).attr("src", '/static/image/white.png');
-
-        $.ajax({
-            type: 'POST',
-            url: "/unlike_prodcomment",
-            data: "id=" + comment_id,
-            success: function (data) {
-
-                $('#vote_countprodcomment' + comment_id).html(data);
-            }
-        });
-    }, function () {
-        var comment_id = $(this).attr("comment_id");
-        $(this).attr("src", '/static/image/blue_heart.png');
-
-        $.ajax({
-            type: 'POST',
-            url: "/like_prodcomment",
-            data: "id=" + comment_id,
-            success: function (data) {
-                $('#vote_countprodcomment' + comment_id).html(data);
-            }
-        });
-    });
-
-
-</script>
