--- a/application/templates/user_container/user_contain_product.html
+++ b/application/templates/user_container/user_contain_product.html
@@ -1,11 +1,14 @@
 {% from 'helpers.html' import products_macro with context %}
+<script type="text/javascript" src="{{ url_for ('static', filename= "js/user_container.js") }}"></script>
+<script type="text/javascript" src="{{ url_for ('static', filename= "js/single_product.js") }}"></script>
+<script type="text/javascript" src="{{ url_for ('static', filename= "js/my.js") }}"></script>
 
 
 {% if products|length >= 1 %}
-                <a href="#" onclick="Product_container('vote', event);">Rating</a>
-                <a href="#" onclick="Product_container('data', event);">Data</a><br>
+    <button id="product" sort="date" user ="{{ user_id }}">date</button>
+    <button id="product" sort="vote" user ="{{ user_id }}">rating</button>
     {% for product in products %}
-            {{ products_macro(product, dict_like, saved_list, 5) }}
+            {{ products_macro(product, dict_like, list_of_favourite, 5) }}
 
     {% endfor %}
 {% else %}
@@ -13,126 +16,3 @@
     <p>Could you add one?</p>
     <a href="{{url_for('add_product')}}">Add_product</a>
             {% endif %}
-        </div>
-</div>
-<script type="text/javascript">
-
-
-jQuery.fn.clickToggle = function(a,b) {
-  function cb(){ [b,a][this._tog^=1].call(this); }
-  return this.on("click", cb);
-};
-
-$( "img#white.product" ).clickToggle(function() {
-    var product_id = $(this).attr("product_id");
-    $(this).attr("src", '/static/image/blue_heart.png');
-
-    $.ajax({
-         type: 'POST',
-         url: "/like_product",
-         data: "id=" +product_id,
-         success: function(data){
-             $('#vote_countproduct' + product_id).html(data);
-         }
-    });
-}, function() {
-    $(this).attr("src", '/static/image/white.png');
-
-    var product_id = $(this).attr("product_id");
-      $.ajax({
-         type: 'POST',
-         url: "/unlike_product",
-         data: "id=" +product_id,
-         success: function(data){
-             $('#vote_countproduct' + product_id).html(data);
-         }
-    });
-});
-
-
-$( "img#blue.product" ).clickToggle(function() {
-    var product_id = $(this).attr("product_id");
-    $(this).attr("src", '/static/image/white.png');
-
-    $.ajax({
-         type: 'POST',
-         url: "/unlike_product",
-         data: "id=" +product_id,
-         success: function(data){
-
-             $('#vote_countproduct' + product_id).html(data);
-         }
-    });
-}, function() {
-    var product_id = $(this).attr("product_id");
-        $(this).attr("src", '/static/image/blue_heart.png');
-
-      $.ajax({
-         type: 'POST',
-         url: "/like_product",
-         data: "id=" +product_id,
-         success: function(data){
-             $('#vote_countproduct' + product_id).html(data);
-         }
-    });
-});
-
-
-
-$( "img#gold_star.product" ).clickToggle(function() {
-    var product_id = $(this).attr("product_id");
-
-    $(this).attr("src", '/static/image/white_star.png');
-
-    $.ajax({
-         type: 'GET',
-         url: "{{ url_for('delete_product') }}",
-         data: "product_id=" +product_id,
-         success: function(data){
-
-             $('.product#star_gold' + product_id).text("Add to saved");
-         }
-    });
-
-}, function() {
-    var product_id = $(this).attr("product_id");
-        $(this).attr("src", '/static/image/gold_star.png');
-
-      $.ajax({
-         type: 'GET',
-         url: "{{ url_for('save_product') }}",
-         data: "product_id=" +product_id,
-         success: function(data){
-             $('.product#star_gold' + product_id).text("Delete_from_saved");
-         }
-    });
-});
-
-$( "img#white_star.product" ).clickToggle(function() {
-    var product_id = $(this).attr("product_id");
-
-    $(this).attr("src", '/static/image/gold_star.png');
-
-    $.ajax({
-         type: 'GET',
-         url: "{{ url_for('save_product') }}",
-         data: "product_id=" +product_id,
-
-         success: function(data){
-             $('.product#star_white' + product_id).text("Delete from saved");
-         }
-    });
-
-}, function() {
-    var product_id = $(this).attr("product_id");
-        $(this).attr("src", '/static/image/white_star.png');
-
-      $.ajax({
-         type: 'GET',
-         url: "{{ url_for('delete_product') }}",
-         data: "product_id=" +product_id,
-         success: function(data){
-             $('.product#star_white' + product_id).text("Add to saved");
-         }
-    });
-});
