--- a/application/static/style/style.css
+++ b/application/static/style/style.css
@@ -1,3 +1,16 @@
+.hiddenfile {
+    position: fixed;
+    margin-bottom: 30%;
+    bottom: 0;
+    display: none;
+    /*width: 50%;*/
+    height: 30%;
+    background-color: #e7f6fd;
+	color: #27aae1;
+	border-width: 1px;
+	border-style: solid;
+	border-color: #27aae1;
+}
 
 
 div#header.row{
