--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -9,9 +9,10 @@
     {% endif %}
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='style/style.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='style/bootstrap.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='style/cropper.css') }}">
 
-    <script type="text/javascript" src="{{ url_for ('static', filename= "js/jquery-3.2.1.min.js") }}"></script>
-        <script type="text/javascript" src="{{ url_for ('static', filename= "js/user_container.js") }}" acync></script>
+    <script type="text/javascript" src="{{ url_for ('static', filename= "js/jquery-3.2.1.min.js") }}" acync></script>
+    <script src="{{ url_for ('static', filename= "js/cropper.js") }}"></script>
 
     <script type="text/javascript" src="{{ url_for ('static', filename= "js/my.js") }}"></script>
     <script type="text/javascript" src="{{ url_for ('static', filename= "js/bootstrap.min.js") }}"></script>
@@ -31,10 +32,10 @@
         {% if current_user.is_authenticated %}
             <div class="col-xs-6 col-sm-3 col-sm-offset-4 col-md-2 col-md-offset-7">
               <span>
-              {% if current_user.avatar %}
+              {% if current_user.avatar_min %}
                   <img src="{{ url_for('static',filename="media/" + current_user.avatar_min) }}" width="60"/>
               {% else %}
-                  <img src="{{ url_for('static',filename="media/icon-user-default.png") }}" width="60"/>
+                  <img src="{{ url_for('static',filename="media/min_icon-user-default.png") }}" width="60"/>
               {% endif %}
                   <a href="{{ url_for('user', username = current_user.username) }}">{{ current_user.username }}</a>
             </span>
