--- a/application/templates/comments.html
+++ b/application/templates/comments.html
@@ -1,7 +1,9 @@
-    <script type="text/javascript" src="{{ url_for ('static', filename= "js/comment.js") }}"></script>
+
+<script type="text/javascript" src="{{ url_for ('static', filename= "js/comment.js") }}" acync></script>
+<script type="text/javascript" src="{{ url_for ('static', filename= "js/my.js") }}" acync></script>
 
 {% from 'helpers.html' import post_comment_macro with context %}
-    {%- for key, value in dictionary.iteritems() recursive -%}
+    {%- for key, value in comment_tree.iteritems() recursive -%}
 
         {% if key %}
             <li>
@@ -19,7 +21,36 @@
         {% endif %}
     {%- endfor -%}
 
+<script>
+    $(document).ready(function() {
+$(".discussion").click(function (event){
+    event.preventDefault();
+    event.stopImmediatePropagation();
 
+    var id = $(this).attr('id');
+    $(".answer#answer" + id).slideToggle();
+    var user = $(this).attr('user');
+    var post = $(this).attr('post_id');
+    $.ajax({
+        type: "POST",
+        url: '/comment_form',
+        data: "parent_id=" + id + "&post_id=" + post,
+        success: function (data) {
+             $(".answer#answer" + id).html(data.com_form);
+
+            $("textarea#text").val(user + ", ");
+
+        },
+        error: function (xhr, str) {
+            alert('Mistake ' + xhr.responseCode);
+        }
+    });
+    event.preventDefault();
+
+});
+});
+
+</script>
 
 
 
