--- a/application/templates/product_comments.html
+++ b/application/templates/product_comments.html
@@ -1,9 +1,10 @@
 
-    <script type="text/javascript" src="{{ url_for ('static', filename= "js/comment.js") }}"></script>
+<script type="text/javascript" src="{{ url_for ('static', filename= "js/comment.js") }}" acync></script>
+<script type="text/javascript" src="{{ url_for ('static', filename= "js/my.js") }}" acync></script>
 
 {% from 'helpers.html' import product_comment_macro with context %}
 
-    {%- for key, value in dictionary.iteritems() recursive -%}
+    {%- for key, value in comment_tree.iteritems() recursive -%}
 
         {% if key %}
             <li>
@@ -22,3 +23,34 @@
     {%- endfor -%}
 
 
+<script>
+$(document).ready(function() {
+
+
+
+// if user not the comments'author, user can discuss other comment
+// data send by ajax on server where render template with updated comment part
+$(".discussion").click(function (event){
+    var id = $(this).attr('id');
+    $(".answer#answer" + id).slideToggle();
+    var user = $(this).attr('user');
+    var product = $(this).attr('product_id');
+    $.ajax({
+        type: "POST",
+        url: '/product_comment_form',
+        data: "parent_id=" + id + "&product_id=" + product,
+        success: function (data) {
+             $(".answer#answer" + id).html(data.com_form);
+
+            $("textarea#text").val(user + ", ");
+
+        },
+        error: function (xhr, str) {
+            alert('Mistake ' + xhr.responseCode);
+        }
+    });
+    event.preventDefault();
+});
+});
+
+</script>
